[gd_scene load_steps=8 format=3 uid="uid://bu25ip1s17dnp"]

[ext_resource type="Script" path="res://src/enemies/enemy.gd" id="1_4cbuq"]
[ext_resource type="Texture2D" uid="uid://bnktf0l5sp3j5" path="res://assets/actors/enemies/granny.png" id="1_4sjww"]
[ext_resource type="Texture2D" uid="uid://bll1e4vohpst6" path="res://assets/actors/enemies/competitive_swimmer64.png" id="3_1lluu"]
[ext_resource type="Texture2D" uid="uid://b3ngigatycinw" path="res://assets/actors/enemies/lifeguard96.png" id="4_bthop"]
[ext_resource type="Texture2D" uid="uid://vl2ulwn30p0q" path="res://assets/actors/enemies/fat_guy96.png" id="5_3juv5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n23c3"]
radius = 34.0147

[sub_resource type="CircleShape2D" id="CircleShape2D_3o2sr"]
resource_local_to_scene = true
radius = 41.1947

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_4cbuq")
enemy_type = 3
granny_texture = ExtResource("1_4sjww")
muscle_texture = ExtResource("3_1lluu")
lifeguard_texture = ExtResource("4_bthop")
boy_texture = ExtResource("5_3juv5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4sjww")

[node name="CollisionShapePhysique" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_n23c3")

[node name="SafeZone" type="Area2D" parent="." groups=["Enemy"]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="SafeZone"]
shape = SubResource("CircleShape2D_3o2sr")

[node name="Alerte" type="Label" parent="."]
offset_left = 30.0
offset_top = -46.0
offset_right = 45.0
offset_bottom = -22.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 27
text = "!"

[connection signal="area_entered" from="SafeZone" to="." method="_on_safe_zone_area_entered"]
[connection signal="area_exited" from="SafeZone" to="." method="_on_safe_zone_area_exited"]
[connection signal="body_entered" from="SafeZone" to="." method="_on_safe_zone_body_entered"]
[connection signal="body_exited" from="SafeZone" to="." method="_on_safe_zone_body_exited"]
